cargo-features = ["edition2024"]

[package]
name = "pinocchio-perp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.9.0"
pinocchio-associated-token-account = "0.2.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
pinocchio-token-program = "0.0.0"
pythnet-sdk = "2.3.1"

[dev-dependencies]
mollusk-svm = "0.4.2"
solana-sdk = "2.3.1"
